// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`save and share bar component EmailShare email icon when tokenising with loading state while network request is fetching data 1`] = `
<BarItem>
  <IconEmail
    fillColour="currentColor"
    height={16}
    title="Share by email"
  />
</BarItem>
`;

exports[`save and share bar component Newskit ShareBar does not render share icons when savingEnabled is false 1`] = `
<div
  className="css-ale85y"
>
  <span
    className="css-oc5jun"
  >
    Share
  </span>
  <ul
    className="css-n1xob"
  >
    <li
      className="css-ex6lpo"
    >
      <div
        data-testid="share-bar-icon"
        role="button"
      >
        <div
          className="css-9hu906"
        >
          <svg
            className="css-18dtlm2"
            viewBox="0 0 24 24"
          >
            <title>
              Email icon
            </title>
            <path
              d="M20,4 L4,4 C2.9,4 2.01,4.9 2.01,6 L2,18 C2,19.1 2.9,20 4,20 L20,20 C21.1,20 22,19.1 22,18 L22,6 C22,4.9 21.1,4 20,4 L20,4 Z M20,8 L12,13 L4,8 L4,6 L12,11 L20,6 L20,8 L20,8 Z"
            />
          </svg>
        </div>
      </div>
    </li>
    <li
      className="css-ex6lpo"
    >
      <a
        className="css-16olkxi"
        data-testid="share-bar-icon"
        href="https://twitter.com/intent/tweet?text=https://www.thetimes.co.uk/"
      >
        <div
          className="css-9hu906"
        >
          <svg
            className="css-foiz1c"
            viewBox="0 0 400 400"
          >
            <title>
              Twitter logo
            </title>
            <g>
              <circle
                cx="200"
                cy="200"
                fill="#1DA1F2"
                r="200"
              />
            </g>
            <g>
              <path
                d="M163.4,305.5c88.7,0,137.2-73.5,137.2-137.2c0-2.1,0-4.2-0.1-6.2c9.4-6.8,17.6-15.3,24.1-25
		c-8.6,3.8-17.9,6.4-27.7,7.6c10-6,17.6-15.4,21.2-26.7c-9.3,5.5-19.6,9.5-30.6,11.7c-8.8-9.4-21.3-15.2-35.2-15.2
		c-26.6,0-48.2,21.6-48.2,48.2c0,3.8,0.4,7.5,1.3,11c-40.1-2-75.6-21.2-99.4-50.4c-4.1,7.1-6.5,15.4-6.5,24.2
		c0,16.7,8.5,31.5,21.5,40.1c-7.9-0.2-15.3-2.4-21.8-6c0,0.2,0,0.4,0,0.6c0,23.4,16.6,42.8,38.7,47.3c-4,1.1-8.3,1.7-12.7,1.7
		c-3.1,0-6.1-0.3-9.1-0.9c6.1,19.2,23.9,33.1,45,33.5c-16.5,12.9-37.3,20.6-59.9,20.6c-3.9,0-7.7-0.2-11.5-0.7
		C110.8,297.5,136.2,305.5,163.4,305.5"
                fill="#FFFFFF"
              />
            </g>
          </svg>
        </div>
      </a>
    </li>
    <li
      className="css-ex6lpo"
    >
      <a
        className="css-16olkxi"
        data-testid="share-bar-icon"
        href="https://www.facebook.com/sharer/sharer.php?u=https://www.thetimes.co.uk/"
      >
        <div
          className="css-9hu906"
        >
          <svg
            className="css-foiz1c"
            viewBox="0 0 1365.3333 1365.3333"
          >
            <title>
              Facebook logo
            </title>
            <g
              transform="matrix(1.3333333,0,0,-1.3333333,0,1365.3333)"
            >
              <g
                transform="scale(0.1)"
              >
                <path
                  d="m 10240,5120 c 0,2827.7 -2292.3,5120 -5120,5120 C 2292.3,10240 0,7947.7 0,5120 0,2564.46 1872.31,446.301 4320,62.1992 V 3640 H 3020 v 1480 h 1300 v 1128 c 0,1283.2 764.38,1992 1933.9,1992 560.17,0 1146.1,-100 1146.1,-100 V 6880 H 6754.38 C 6118.35,6880 5920,6485.33 5920,6080.43 V 5120 H 7340 L 7113,3640 H 5920 V 62.1992 C 8367.69,446.301 10240,2564.46 10240,5120"
                  fill="#1877f2"
                />
                <path
                  d="m 7113,3640 227,1480 H 5920 v 960.43 c 0,404.9 198.35,799.57 834.38,799.57 H 7400 v 1260 c 0,0 -585.93,100 -1146.1,100 C 5084.38,8240 4320,7531.2 4320,6248 V 5120 H 3020 V 3640 H 4320 V 62.1992 C 4580.67,21.3008 4847.84,0 5120,0 c 272.16,0 539.33,21.3008 800,62.1992 V 3640 h 1193"
                  fill="#ffffff"
                />
              </g>
            </g>
          </svg>
        </div>
      </a>
    </li>
    <li
      className="css-ex6lpo"
    >
      <div
        data-testid="share-bar-icon"
        role="button"
      >
        <div
          className="css-9hu906"
        >
          <svg
            className="css-18dtlm2"
            viewBox="0 0 15 15"
          >
            <title>
              Copy icon
            </title>
            <path
              d="M13.936 1.12A3.532 3.532 0 0 0 11.36 0a3.53 3.53 0 0 0-2.575 1.119l-3.22 3.38c-1.42 1.49-1.42 3.914 0 5.405.229.24.49.43.763.596L7.71 9.052a1.793 1.793 0 0 1-.857-.5 1.924 1.924 0 0 1-.455-.827v-.002a1.984 1.984 0 0 1-.06-.324l-.001-.011a2.074 2.074 0 0 1-.005-.32l.002-.025c.009-.103.024-.206.048-.307.001-.009.005-.017.007-.026.08-.314.23-.614.464-.86l3.22-3.38a1.776 1.776 0 0 1 1.288-.558c.465 0 .932.187 1.287.559a1.98 1.98 0 0 1 0 2.703l-1.119 1.174c.03.082.05.167.075.25l.001.002a5.013 5.013 0 0 1 .216 1.702l-.007.082c-.008.134-.013.268-.032.402l2.154-2.26c1.42-1.491 1.42-3.917 0-5.406zM8.672 4.5l-1.38 1.45c.312.08.611.24.856.497.227.24.373.526.456.828v.003c.029.107.048.214.06.323v.011c.01.107.013.213.006.32l-.003.026a2.01 2.01 0 0 1-.047.307c-.002.01-.006.018-.008.026-.08.314-.23.613-.464.86l-3.22 3.378c-.356.374-.822.56-1.288.56-.465 0-.932-.186-1.287-.56a1.978 1.978 0 0 1 0-2.702l1.119-1.175c-.03-.082-.05-.167-.075-.25l-.02-.069A4.982 4.982 0 0 1 3.18 6.7c0-.029.004-.056.006-.083.008-.134.013-.268.032-.402l-2.154 2.26c-1.42 1.49-1.42 3.915 0 5.405A3.537 3.537 0 0 0 3.64 15c.973 0 1.887-.398 2.576-1.119l3.22-3.379c1.419-1.49 1.419-3.915 0-5.404a3.644 3.644 0 0 0-.764-.598z"
            />
          </svg>
        </div>
      </div>
    </li>
  </ul>
  
  <ul
    className="css-1nogadw"
  />
</div>
`;

exports[`save and share bar component Newskit ShareBar does not render share icons when sharingEnabled is false 1`] = `
<div
  className="css-ale85y"
>
  
  <ul
    className="css-n1xob"
  />
  <span
    className="css-oc5jun"
  >
    Save
  </span>
  <ul
    className="css-1nogadw"
  >
    <li
      className="css-ex6lpo"
    />
  </ul>
</div>
`;

exports[`save and share bar component Newskit ShareBar does not render share icons when sharingEnabled is false 2`] = `
<div
  className="css-ale85y"
>
  <span
    className="css-oc5jun"
  >
    Share
  </span>
  <ul
    className="css-n1xob"
  >
    <li
      className="css-ex6lpo"
    >
      <div
        data-testid="share-bar-icon"
        role="button"
      >
        <div
          className="css-9hu906"
        >
          <svg
            className="css-18dtlm2"
            viewBox="0 0 24 24"
          >
            <title>
              Email icon
            </title>
            <path
              d="M20,4 L4,4 C2.9,4 2.01,4.9 2.01,6 L2,18 C2,19.1 2.9,20 4,20 L20,20 C21.1,20 22,19.1 22,18 L22,6 C22,4.9 21.1,4 20,4 L20,4 Z M20,8 L12,13 L4,8 L4,6 L12,11 L20,6 L20,8 L20,8 Z"
            />
          </svg>
        </div>
      </div>
    </li>
    <li
      className="css-ex6lpo"
    >
      <a
        className="css-16olkxi"
        data-testid="share-bar-icon"
        href="https://twitter.com/intent/tweet?text=https://www.thetimes.co.uk/"
      >
        <div
          className="css-9hu906"
        >
          <svg
            className="css-foiz1c"
            viewBox="0 0 400 400"
          >
            <title>
              Twitter logo
            </title>
            <g>
              <circle
                cx="200"
                cy="200"
                fill="#1DA1F2"
                r="200"
              />
            </g>
            <g>
              <path
                d="M163.4,305.5c88.7,0,137.2-73.5,137.2-137.2c0-2.1,0-4.2-0.1-6.2c9.4-6.8,17.6-15.3,24.1-25
		c-8.6,3.8-17.9,6.4-27.7,7.6c10-6,17.6-15.4,21.2-26.7c-9.3,5.5-19.6,9.5-30.6,11.7c-8.8-9.4-21.3-15.2-35.2-15.2
		c-26.6,0-48.2,21.6-48.2,48.2c0,3.8,0.4,7.5,1.3,11c-40.1-2-75.6-21.2-99.4-50.4c-4.1,7.1-6.5,15.4-6.5,24.2
		c0,16.7,8.5,31.5,21.5,40.1c-7.9-0.2-15.3-2.4-21.8-6c0,0.2,0,0.4,0,0.6c0,23.4,16.6,42.8,38.7,47.3c-4,1.1-8.3,1.7-12.7,1.7
		c-3.1,0-6.1-0.3-9.1-0.9c6.1,19.2,23.9,33.1,45,33.5c-16.5,12.9-37.3,20.6-59.9,20.6c-3.9,0-7.7-0.2-11.5-0.7
		C110.8,297.5,136.2,305.5,163.4,305.5"
                fill="#FFFFFF"
              />
            </g>
          </svg>
        </div>
      </a>
    </li>
    <li
      className="css-ex6lpo"
    >
      <a
        className="css-16olkxi"
        data-testid="share-bar-icon"
        href="https://www.facebook.com/sharer/sharer.php?u=https://www.thetimes.co.uk/"
      >
        <div
          className="css-9hu906"
        >
          <svg
            className="css-foiz1c"
            viewBox="0 0 1365.3333 1365.3333"
          >
            <title>
              Facebook logo
            </title>
            <g
              transform="matrix(1.3333333,0,0,-1.3333333,0,1365.3333)"
            >
              <g
                transform="scale(0.1)"
              >
                <path
                  d="m 10240,5120 c 0,2827.7 -2292.3,5120 -5120,5120 C 2292.3,10240 0,7947.7 0,5120 0,2564.46 1872.31,446.301 4320,62.1992 V 3640 H 3020 v 1480 h 1300 v 1128 c 0,1283.2 764.38,1992 1933.9,1992 560.17,0 1146.1,-100 1146.1,-100 V 6880 H 6754.38 C 6118.35,6880 5920,6485.33 5920,6080.43 V 5120 H 7340 L 7113,3640 H 5920 V 62.1992 C 8367.69,446.301 10240,2564.46 10240,5120"
                  fill="#1877f2"
                />
                <path
                  d="m 7113,3640 227,1480 H 5920 v 960.43 c 0,404.9 198.35,799.57 834.38,799.57 H 7400 v 1260 c 0,0 -585.93,100 -1146.1,100 C 5084.38,8240 4320,7531.2 4320,6248 V 5120 H 3020 V 3640 H 4320 V 62.1992 C 4580.67,21.3008 4847.84,0 5120,0 c 272.16,0 539.33,21.3008 800,62.1992 V 3640 h 1193"
                  fill="#ffffff"
                />
              </g>
            </g>
          </svg>
        </div>
      </a>
    </li>
    <li
      className="css-ex6lpo"
    >
      <div
        data-testid="share-bar-icon"
        role="button"
      >
        <div
          className="css-9hu906"
        >
          <svg
            className="css-18dtlm2"
            viewBox="0 0 15 15"
          >
            <title>
              Copy icon
            </title>
            <path
              d="M13.936 1.12A3.532 3.532 0 0 0 11.36 0a3.53 3.53 0 0 0-2.575 1.119l-3.22 3.38c-1.42 1.49-1.42 3.914 0 5.405.229.24.49.43.763.596L7.71 9.052a1.793 1.793 0 0 1-.857-.5 1.924 1.924 0 0 1-.455-.827v-.002a1.984 1.984 0 0 1-.06-.324l-.001-.011a2.074 2.074 0 0 1-.005-.32l.002-.025c.009-.103.024-.206.048-.307.001-.009.005-.017.007-.026.08-.314.23-.614.464-.86l3.22-3.38a1.776 1.776 0 0 1 1.288-.558c.465 0 .932.187 1.287.559a1.98 1.98 0 0 1 0 2.703l-1.119 1.174c.03.082.05.167.075.25l.001.002a5.013 5.013 0 0 1 .216 1.702l-.007.082c-.008.134-.013.268-.032.402l2.154-2.26c1.42-1.491 1.42-3.917 0-5.406zM8.672 4.5l-1.38 1.45c.312.08.611.24.856.497.227.24.373.526.456.828v.003c.029.107.048.214.06.323v.011c.01.107.013.213.006.32l-.003.026a2.01 2.01 0 0 1-.047.307c-.002.01-.006.018-.008.026-.08.314-.23.613-.464.86l-3.22 3.378c-.356.374-.822.56-1.288.56-.465 0-.932-.186-1.287-.56a1.978 1.978 0 0 1 0-2.702l1.119-1.175c-.03-.082-.05-.167-.075-.25l-.02-.069A4.982 4.982 0 0 1 3.18 6.7c0-.029.004-.056.006-.083.008-.134.013-.268.032-.402l-2.154 2.26c-1.42 1.49-1.42 3.915 0 5.405A3.537 3.537 0 0 0 3.64 15c.973 0 1.887-.398 2.576-1.119l3.22-3.379c1.419-1.49 1.419-3.915 0-5.404a3.644 3.644 0 0 0-.764-.598z"
            />
          </svg>
        </div>
      </div>
    </li>
  </ul>
  <span
    className="css-oc5jun"
  >
    Save
  </span>
  <ul
    className="css-1nogadw"
  >
    <li
      className="css-ex6lpo"
    />
  </ul>
</div>
`;

exports[`save and share bar component Newskit ShareBar does not render when savingEnabled and sharingEnabled is false 1`] = `
<div
  className="css-ale85y"
>
  <span
    className="css-oc5jun"
  >
    Share
  </span>
  <ul
    className="css-n1xob"
  >
    <li
      className="css-ex6lpo"
    >
      <div
        data-testid="share-bar-icon"
        role="button"
      >
        <div
          className="css-9hu906"
        >
          <svg
            className="css-18dtlm2"
            viewBox="0 0 24 24"
          >
            <title>
              Email icon
            </title>
            <path
              d="M20,4 L4,4 C2.9,4 2.01,4.9 2.01,6 L2,18 C2,19.1 2.9,20 4,20 L20,20 C21.1,20 22,19.1 22,18 L22,6 C22,4.9 21.1,4 20,4 L20,4 Z M20,8 L12,13 L4,8 L4,6 L12,11 L20,6 L20,8 L20,8 Z"
            />
          </svg>
        </div>
      </div>
    </li>
    <li
      className="css-ex6lpo"
    >
      <a
        className="css-16olkxi"
        data-testid="share-bar-icon"
        href="https://twitter.com/intent/tweet?text=https://www.thetimes.co.uk/"
      >
        <div
          className="css-9hu906"
        >
          <svg
            className="css-foiz1c"
            viewBox="0 0 400 400"
          >
            <title>
              Twitter logo
            </title>
            <g>
              <circle
                cx="200"
                cy="200"
                fill="#1DA1F2"
                r="200"
              />
            </g>
            <g>
              <path
                d="M163.4,305.5c88.7,0,137.2-73.5,137.2-137.2c0-2.1,0-4.2-0.1-6.2c9.4-6.8,17.6-15.3,24.1-25
		c-8.6,3.8-17.9,6.4-27.7,7.6c10-6,17.6-15.4,21.2-26.7c-9.3,5.5-19.6,9.5-30.6,11.7c-8.8-9.4-21.3-15.2-35.2-15.2
		c-26.6,0-48.2,21.6-48.2,48.2c0,3.8,0.4,7.5,1.3,11c-40.1-2-75.6-21.2-99.4-50.4c-4.1,7.1-6.5,15.4-6.5,24.2
		c0,16.7,8.5,31.5,21.5,40.1c-7.9-0.2-15.3-2.4-21.8-6c0,0.2,0,0.4,0,0.6c0,23.4,16.6,42.8,38.7,47.3c-4,1.1-8.3,1.7-12.7,1.7
		c-3.1,0-6.1-0.3-9.1-0.9c6.1,19.2,23.9,33.1,45,33.5c-16.5,12.9-37.3,20.6-59.9,20.6c-3.9,0-7.7-0.2-11.5-0.7
		C110.8,297.5,136.2,305.5,163.4,305.5"
                fill="#FFFFFF"
              />
            </g>
          </svg>
        </div>
      </a>
    </li>
    <li
      className="css-ex6lpo"
    >
      <a
        className="css-16olkxi"
        data-testid="share-bar-icon"
        href="https://www.facebook.com/sharer/sharer.php?u=https://www.thetimes.co.uk/"
      >
        <div
          className="css-9hu906"
        >
          <svg
            className="css-foiz1c"
            viewBox="0 0 1365.3333 1365.3333"
          >
            <title>
              Facebook logo
            </title>
            <g
              transform="matrix(1.3333333,0,0,-1.3333333,0,1365.3333)"
            >
              <g
                transform="scale(0.1)"
              >
                <path
                  d="m 10240,5120 c 0,2827.7 -2292.3,5120 -5120,5120 C 2292.3,10240 0,7947.7 0,5120 0,2564.46 1872.31,446.301 4320,62.1992 V 3640 H 3020 v 1480 h 1300 v 1128 c 0,1283.2 764.38,1992 1933.9,1992 560.17,0 1146.1,-100 1146.1,-100 V 6880 H 6754.38 C 6118.35,6880 5920,6485.33 5920,6080.43 V 5120 H 7340 L 7113,3640 H 5920 V 62.1992 C 8367.69,446.301 10240,2564.46 10240,5120"
                  fill="#1877f2"
                />
                <path
                  d="m 7113,3640 227,1480 H 5920 v 960.43 c 0,404.9 198.35,799.57 834.38,799.57 H 7400 v 1260 c 0,0 -585.93,100 -1146.1,100 C 5084.38,8240 4320,7531.2 4320,6248 V 5120 H 3020 V 3640 H 4320 V 62.1992 C 4580.67,21.3008 4847.84,0 5120,0 c 272.16,0 539.33,21.3008 800,62.1992 V 3640 h 1193"
                  fill="#ffffff"
                />
              </g>
            </g>
          </svg>
        </div>
      </a>
    </li>
    <li
      className="css-ex6lpo"
    >
      <div
        data-testid="share-bar-icon"
        role="button"
      >
        <div
          className="css-9hu906"
        >
          <svg
            className="css-18dtlm2"
            viewBox="0 0 15 15"
          >
            <title>
              Copy icon
            </title>
            <path
              d="M13.936 1.12A3.532 3.532 0 0 0 11.36 0a3.53 3.53 0 0 0-2.575 1.119l-3.22 3.38c-1.42 1.49-1.42 3.914 0 5.405.229.24.49.43.763.596L7.71 9.052a1.793 1.793 0 0 1-.857-.5 1.924 1.924 0 0 1-.455-.827v-.002a1.984 1.984 0 0 1-.06-.324l-.001-.011a2.074 2.074 0 0 1-.005-.32l.002-.025c.009-.103.024-.206.048-.307.001-.009.005-.017.007-.026.08-.314.23-.614.464-.86l3.22-3.38a1.776 1.776 0 0 1 1.288-.558c.465 0 .932.187 1.287.559a1.98 1.98 0 0 1 0 2.703l-1.119 1.174c.03.082.05.167.075.25l.001.002a5.013 5.013 0 0 1 .216 1.702l-.007.082c-.008.134-.013.268-.032.402l2.154-2.26c1.42-1.491 1.42-3.917 0-5.406zM8.672 4.5l-1.38 1.45c.312.08.611.24.856.497.227.24.373.526.456.828v.003c.029.107.048.214.06.323v.011c.01.107.013.213.006.32l-.003.026a2.01 2.01 0 0 1-.047.307c-.002.01-.006.018-.008.026-.08.314-.23.613-.464.86l-3.22 3.378c-.356.374-.822.56-1.288.56-.465 0-.932-.186-1.287-.56a1.978 1.978 0 0 1 0-2.702l1.119-1.175c-.03-.082-.05-.167-.075-.25l-.02-.069A4.982 4.982 0 0 1 3.18 6.7c0-.029.004-.056.006-.083.008-.134.013-.268.032-.402l-2.154 2.26c-1.42 1.49-1.42 3.915 0 5.405A3.537 3.537 0 0 0 3.64 15c.973 0 1.887-.398 2.576-1.119l3.22-3.379c1.419-1.49 1.419-3.915 0-5.404a3.644 3.644 0 0 0-.764-.598z"
            />
          </svg>
        </div>
      </div>
    </li>
  </ul>
  <span
    className="css-oc5jun"
  >
    Save
  </span>
  <ul
    className="css-1nogadw"
  >
    <li
      className="css-ex6lpo"
    />
  </ul>
</div>
`;

exports[`save and share bar component renders save star web correctly 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitAlignItems": "center",
      "WebkitBoxAlign": "center",
      "WebkitBoxDirection": "normal",
      "WebkitBoxOrient": "horizontal",
      "WebkitFlexDirection": "row",
      "alignItems": "center",
      "flexDirection": "row",
      "height": "40px",
      "msFlexAlign": "center",
      "msFlexDirection": "row",
    }
  }
>
  <SaveStarWeb
    articleId="96508c84-6611-11e9-adc2-05e1b87efaea"
    colour="#696969"
    height={18}
    hoverColor="#1D1D1B"
  />
</div>
`;

exports[`save and share bar component save and share bar renders correctly when logged in 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitAlignItems": "center",
      "WebkitBoxAlign": "center",
      "WebkitBoxDirection": "normal",
      "WebkitBoxFlex": 1,
      "WebkitBoxOrient": "horizontal",
      "WebkitBoxPack": "justify",
      "WebkitFlexBasis": "0%",
      "WebkitFlexDirection": "row",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "WebkitJustifyContent": "space-between",
      "alignItems": "center",
      "flexBasis": "0%",
      "flexDirection": "row",
      "flexGrow": 1,
      "flexShrink": 1,
      "height": "100%",
      "justifyContent": "space-between",
      "msFlexAlign": "center",
      "msFlexDirection": "row",
      "msFlexNegative": 1,
      "msFlexPack": "justify",
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
      "paddingBottom": "10px",
      "paddingTop": "10px",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "center",
        "WebkitBoxAlign": "center",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "horizontal",
        "WebkitFlexDirection": "row",
        "alignItems": "center",
        "flexDirection": "row",
        "height": "40px",
        "msFlexAlign": "center",
        "msFlexDirection": "row",
      }
    }
  >
    <div
      className="css-text-901oao"
      style={
        Object {
          "WebkitTransform": "translateY(9%)",
          "color": "rgba(105,105,105,1.00)",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": "14px",
          "lineHeight": "14px",
          "marginRight": "10px",
          "transform": "translateY(9%)",
        }
      }
    >
      Share
    </div>
    <BarItem>
      <IconEmail
        fillColour="currentColor"
        height={16}
        title="Share by email"
      />
    </BarItem>
    <BarItem
      target="_blank"
      url="https://twitter.com/intent/tweet?text=https://www.thetimes.co.uk/"
    >
      <IconTwitter
        fillColour="currentColor"
        height={16}
        title="Share on Twitter"
      />
    </BarItem>
    <BarItem
      target="_blank"
      url="https://www.facebook.com/sharer/sharer.php?u=https://www.thetimes.co.uk/"
    >
      <IconFacebook
        fillColour="currentColor"
        height={18}
        title="Share on Facebook"
      />
    </BarItem>
    <BarItem
      color="#696969"
      hoverColor="#1D1D1B"
    >
      <IconCopyLink
        fillColour="currentColor"
        height={16}
        title="Copy link to clipboard"
      />
    </BarItem>
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "center",
        "WebkitBoxAlign": "center",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "horizontal",
        "WebkitFlexDirection": "row",
        "alignItems": "center",
        "flexDirection": "row",
        "height": "40px",
        "msFlexAlign": "center",
        "msFlexDirection": "row",
      }
    }
  >
    <SaveStarWeb
      articleId="96508c84-6611-11e9-adc2-05e1b87efaea"
      colour="#696969"
      height={18}
      hoverColor="#1D1D1B"
    />
  </div>
</div>
`;

exports[`save and share bar component save and share bar renders correctly when not logged in 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitAlignItems": "center",
      "WebkitBoxAlign": "center",
      "WebkitBoxDirection": "normal",
      "WebkitBoxFlex": 1,
      "WebkitBoxOrient": "horizontal",
      "WebkitBoxPack": "justify",
      "WebkitFlexBasis": "0%",
      "WebkitFlexDirection": "row",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "WebkitJustifyContent": "space-between",
      "alignItems": "center",
      "flexBasis": "0%",
      "flexDirection": "row",
      "flexGrow": 1,
      "flexShrink": 1,
      "height": "100%",
      "justifyContent": "space-between",
      "msFlexAlign": "center",
      "msFlexDirection": "row",
      "msFlexNegative": 1,
      "msFlexPack": "justify",
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
      "paddingBottom": "10px",
      "paddingTop": "10px",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "center",
        "WebkitBoxAlign": "center",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "horizontal",
        "WebkitFlexDirection": "row",
        "alignItems": "center",
        "flexDirection": "row",
        "height": "40px",
        "msFlexAlign": "center",
        "msFlexDirection": "row",
      }
    }
  >
    <div
      className="css-text-901oao"
      style={
        Object {
          "WebkitTransform": "translateY(9%)",
          "color": "rgba(105,105,105,1.00)",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": "14px",
          "lineHeight": "14px",
          "marginRight": "10px",
          "transform": "translateY(9%)",
        }
      }
    >
      Share
    </div>
    <BarItem>
      <IconEmail
        fillColour="currentColor"
        height={16}
        title="Share by email"
      />
    </BarItem>
    <BarItem
      target="_blank"
      url="https://twitter.com/intent/tweet?text=https://www.thetimes.co.uk/"
    >
      <IconTwitter
        fillColour="currentColor"
        height={16}
        title="Share on Twitter"
      />
    </BarItem>
    <BarItem
      target="_blank"
      url="https://www.facebook.com/sharer/sharer.php?u=https://www.thetimes.co.uk/"
    >
      <IconFacebook
        fillColour="currentColor"
        height={18}
        title="Share on Facebook"
      />
    </BarItem>
    <BarItem
      color="#696969"
      hoverColor="#1D1D1B"
    >
      <IconCopyLink
        fillColour="currentColor"
        height={16}
        title="Copy link to clipboard"
      />
    </BarItem>
  </div>
</div>
`;
